# session-indicator

./: AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md
data/: session-indicator.desktop
debian/: changelog  control  copyright
src/: ConformationDialog.vala  Indicator.vala  Main.vala  ScreenSaver.vala  SessionMan.vala
